# Hackathon_II-Todo_App-

./: .gitignore  AGENT.md  CLAUDE.md  README.md  explain.md  progress.md  pyproject.toml
.specify/memory/: constitution.md
backend/: CLAUDE.md  agent.py  auth.py  db.py  main.py  models.py  pyproject.toml
backend/alembic/: env.py
backend/mcp/: __init__.py  dispatcher.py  schemas.py  server.py  tools.py
backend/routes/: chat.py  conversations.py  tasks.py
frontend/: CLAUDE.md  middleware.ts  next.config.ts  package-lock.json  package.json
frontend/app/: error.tsx  globals.css  layout.tsx  loading.tsx  page.tsx
frontend/components/: ChatConversationSelector.tsx  ChatInput.tsx  ChatKitPanel.tsx  ChatMessages.tsx  ChatPanel.tsx  EmptyState.tsx  ProductivityChart.tsx  StatsBar.tsx  TaskCard.tsx  TaskForm.tsx  TaskList.tsx  ToolCallChip.tsx  session-provider.tsx
frontend/lib/: api.ts  auth-client.ts  auth.ts
history/adr/: 0001-mcp-protocol-for-ai-tool-interface.md  0002-stateless-chat-architecture.md
specs/001-mcp-server-tools/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-ai-chat-endpoint/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-chatkit-frontend/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/phase1-console/: plan.md  spec.md  tasks.md
src/: __init__.py  main.py  models.py  task_manager.py
tests/backend/: test_auth.py  test_chat.py  test_conversations.py  test_mcp_tools.py  test_tasks_api.py
tests/phase1/: test_models.py  test_task_manager.py
(+49 files in other folders)
